fixed collapse button by forcing css & removed console log for click

--- a/stylesheets/projects/project_template.css
+++ b/stylesheets/projects/project_template.css
@@ -118,7 +118,7 @@ body {
 
 .expand-button {
     content: url(../../assets/icons/project_template/up_arrow.svg);
-    transform: rotate(180deg);
+    transform: rotate(180deg) !important;
     width: 50px;
     height: 50px;
     margin-inline: 3em;
